overlays/test/httproute.yaml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: helloworld
spec:
  parentRefs:
  - name: helloworld-gateway-test
  rules:
    - matches:
      - path:
          value: "/hello-test"
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /hello
      backendRefs:
      - name: helloworld-test
        port: 5004
